--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,13 +1,23 @@
-html{
-  font-family: "Courier New", Courier, monospace
-}
-
-#quote {
-  font-size: 3em
+body, html {
+  width: 100%;
+  height: 100%;
+  margin: auto;
 }
 
 #main {
+  font-family: "Courier New", Courier, monospace;
+  color: white;
   text-align: center;
-  width: 800px;
-  margin: 0 auto;
+  width: 900px;
+  margin: auto
+}
+
+#quote {
+  font-size: 3em;
+  margin-top: 0;
+  text-algin: center;
+}
+
+a {
+  color: white;
 }
