--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,21 +1,34 @@
-body, html {
-  width: 100%;
+#main {
   height: 100%;
-  margin: auto;
+  margin: 100%;
+}
+
+body{
+  margin: 0;
+  text-align: center;
 }
 
 #main {
   font-family: "Courier New", Courier, monospace;
   color: white;
   text-align: center;
-  width: 900px;
-  margin: auto
+  width: 50%;
+  margin: auto;
 }
 
 #quote {
   font-size: 3em;
   margin-top: 0;
   text-algin: center;
+}
+
+#video {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  text-align: center;
 }
 
 a {
